class_name VRExitProperties
extends Control


@onready var mach_number_label : Label = $VBoxContainer/ExitMachLabel
@onready var temperature_label : Label = $VBoxContainer/ExitTempLabel
@onready var pressure_label : Label = $VBoxContainer/ExitPresLabel
@onready var density_label : Label = $VBoxContainer/ExitDensLabel
@onready var stag_temp_label : Label = $VBoxContainer/ExitStagTempLabel
@onready var stag_press_label : Label = $VBoxContainer/ExitStagPresLabel
@onready var flow_velocity_label : Label = $VBoxContainer/ExitFlowVelLabel
